# chatter-split

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
src/whisper_transcriber/: __init__.py  api.py  cli.py  diarizer.py  env_config.py  formatter.py  help_view.py  input_resolver.py  pipeline.py  transcriber.py
tests/: test_api.py  test_cli.py  test_diarizer.py  test_formatter.py  test_makefile.py  test_pipeline.py
