[project]
name = "whisper-speech-transcriber"
version = "0.1.0"
description = "Whisper-based MP3 transcription to markdown with speaker separation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "faster-whisper>=1.1.1",
  "speechbrain>=1.0.2",
  "torchaudio>=2.3.1",
  "scikit-learn>=1.5.0",
  "numpy>=1.26.0",
  "rich>=13.7.1",
  "typer>=0.12.3",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.6",
  "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-mock>=3.14.0",
  "httpx>=0.27.2"
]

[project.scripts]
transcribe = "whisper_transcriber.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whisper_transcriber"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/README.md",
  "/pyproject.toml",
  "/requirements.txt",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
